[package]
name = "tokio-memq-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "tokio_memq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
pythonize = "0.27"
tokio_memq_crate = { package = "tokio-memq", version = "0.2.1" }
